# fake-ollama

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
tests/: integration_test.rs
