[package]
name = "fakeOllama"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
clap = { version = "4.5.4", features = ["derive"] }
futures-util = "0.3.31"
chrono = { version = "0.4.38", features = ["serde"] }
crypto-hash = "0.3.4"
regex = "1.10.4"

[dev-dependencies]
wiremock = "0.6.0"
